// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button component renders a anchor when prop \`type\` is link and an external link is given 1`] = `
<a
  className="btn btn--primary btn--rectangle "
  href="https://ultimaker.com/"
  id="testButton"
>
  <span
    className="text"
  >
    Button text
  </span>
</a>
`;

exports[`The Button component renders a link when prop \`type\` is link and an internal link is given 1`] = `
<Link
  className="btn btn--primary btn--rectangle "
  id="testButton"
  replace={false}
  to="/print_jobs"
>
  <span
    className="text"
  >
    Button text
  </span>
</Link>
`;

exports[`The Button component should render 1`] = `
<button
  className="btn btn--primary btn--rectangle "
  id="testButton"
  onClick={[Function]}
  type="button"
>
  <span
    className="text"
  >
    Button text
  </span>
</button>
`;
